# rotviz

./: README.md  pyproject.toml
rotviz/: __main__.py  meshview.py
rotviz/assets/: cube.ply
src/rotviz/: __main__.py  meshview.py
