[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rotviz"
version = "0.1.1"
description = "Rotation visualization tool"
authors = [
    {name = "Martin Cifka", email = "martin.cifka@cvut.cz"},
]
dependencies = [
    "setuptools>=60",
    "opencv-python>=4.10.0.84",
    "pyrender>=0.1.45",
    "trimesh>=4.5.1",
    "scipy>=1.14.1",
    "numpy>=1.26.4",
    "pin>=2.7.0",
    "matplotlib"
]
requires-python = ">=3.10,<3.12"
readme = "README.md"
license = {text = "BSD2"}

[tool.setuptools]
packages = ["rotviz"]  # Ensure your package is correctly identified
include-package-data = true  # Ensures data files specified below are included

[tool.setuptools.package-data]
rotviz = ["assets/*"]